-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.2
-
Fix Version/s: 10.2.5
-
Component/s: Storage Engine - InnoDB
-
Labels:
InnoDB divides the allocation of undo logs into rollback segments. The DB_ROLL_PTR system column of clustered indexes can address up to 128 rollback segments. Originally, InnoDB only created one rollback segment. In MySQL 5.5 or in the InnoDB Plugin for MySQL 5.1, all 128 rollback segments were created.
MySQL 5.7 hard-codes the rollback segment IDs 1..32 for temporary undo logs. On upgrade, unless a slow shutdown (innodb_fast_shutdown=0) was performed on the old server instance, these rollback segments could be in use by transactions that are in XA PREPARE state or transactions that were left behind by a server kill followed by a normal shutdown immediately after restart.
Persistent tables cannot refer to temporary undo logs or vice versa. Therefore, we should keep two distinct sets of rollback segments: one for persistent tables and another for temporary tables. In this way, all 128 rollback segments will be available for persistent transactions, which could improve performance. Also, MariaDB 10.2 would remain more compatible than MySQL 5.7 with data files from earlier versions of MySQL or MariaDB.
- causes
-
MDEV-16017 galera mtr tests fail with sst_xtrabackup-v2
-
- Closed
-
-
MDEV-17851 Assertion failure srv_undo_tablespaces > 1
-
- Closed
-
- is duplicated by
-
MDEV-12388 InnoDB: Failing assertion: rollback in innobase/btr/btr0cur.cc line 7142 upon upgrade
-
- Closed
-
- relates to
-
MDEV-13013 InnoDB unnecessarily extends data files
-
- Stalled
-
-
MDEV-23382 Change DB_ROLL_PTR format to allow more than 128 concurrent START TRANSACTION
-
- Open
-
-
MDEV-13082 Upgrade Instructions 10.1 to 10.2 Result In Indefinite Shutdown Duration
-
- Closed
-
-
MDEV-13269 Upgrade tests for InnoDB undo log
-
- Closed
-
-
MDEV-15453 IST failed during upgrade of version and SST failed too from 10.2.12 to 10.2.13
-
- Closed
-
-
MDEV-15522 Change galera suite MTR tests to use mariabackup instead of xtrabackup
-
- Closed
-
-
MDEV-17304 Replace use of XtraBackup with MariaDB Backup
-
- Closed
-